# baynext-monorepo

.github/workflows/: backend-ci.yaml  terraform-plan.yaml
backend/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  datasets.py  jobs.py  pipelines.py
backend/app/core/: db.py  dependencies.py  exceptions.py  logging.py  middleware.py  security.py  settings.py
backend/app/lib/: meridian.py  vercel_blob.py
backend/app/models/: __init__.py  auth.py  base.py  enums.py  membership.py  project.py  user.py
backend/app/routers/v1/: __init__.py  auth.py  health.py  me.py
backend/app/routers/v1/projects/: __init__.py  base.py
backend/app/routers/v1/projects/[project_id]/: __init__.py  base.py
backend/app/schemas/: __init__.py  dataset.py  enums.py  job.py  key.py  model.py  pipeline.py  project.py
backend/app/services/: __init__.py  auth.py  base.py  job.py  pipeline.py  project.py  user.py
backend/app/tasks/: train.py
backend/app/utils/: constants.py
backend/app/validations/: datasets.py  enums.py  health.py  job.py  job_parameters.py  model.py  model_spec.py  pipeline.py  priors.py
backend/scripts/: cli.py  db  seed.py
backend/tests/: test_security.py  test_settings.py
backend/tests/api/: test_base.py
backend/tests/core/: test_exceptions.py  test_middleware.py  test_settings.py
backend/tests/schemas/: test_dataset.py
libs/baynext-py/: README.md  pyproject.toml
libs/baynext-py/src/baynext/: __init__.py  client.py  config.py  main.py
libs/baynext-py/src/baynext/commands/auth/: __init__.py  login.py  me.py  token.py
libs/baynext-py/src/baynext/commands/config/: get.py  set.py  show.py
libs/baynext-py/src/baynext/commands/projects/: __init__.py  create.py  delete.py  get.py  list.py
terraform/: main.tf  terraform.tf
