[project]
name = "baynext"
version = "0.1.0"
description = "A CLI tool for managing Baynext projects and datasets"
readme = "README.md"
authors = [
    { name = "Léo Grosjean", email = "leo.bigjin@gmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]

[project.scripts]
baynext = "baynext.main:app"

[tool.ruff.lint.isort]
known-local-folder = ["src", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
